--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ai-zen/chats-core",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "description": "",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -17,12 +17,13 @@
   "license": "ISC",
   "devDependencies": {
     "@types/json-schema": "^7.0.15",
-    "typescript": "^5.3.3",
-    "rimraf": "^5.0.5"
+    "rimraf": "^5.0.5",
+    "typescript": "^5.3.3"
   },
   "dependencies": {
     "@ai-zen/async-queue": "^1.0.2",
     "@ai-zen/event-bus": "^1.0.1",
-    "@ai-zen/node-fetch-event-source": "^2.1.4"
+    "@ai-zen/node-fetch-event-source": "^2.1.4",
+    "jose": "^5.2.2"
   }
 }
