Refactoring `Endpoints` and optimizing some code.

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build-core": "pnpm --filter @ai-zen/chats-code build",
+    "dev": "pnpm build-core && pnpm --filter @ai-zen/chats-webui dev"
   },
   "keywords": [],
   "author": "",
