--- a/packages/webui/package.json
+++ b/packages/webui/package.json
@@ -18,7 +18,8 @@
     "highlight.js": "^11.9.0",
     "marked": "^12.0.0",
     "vue": "^3.3.11",
-    "vue-router": "^4.2.5"
+    "vue-router": "^4.2.5",
+    "markdown-it": "^13.0.0"
   },
   "devDependencies": {
     "@types/json-schema": "^7.0.15",
@@ -26,6 +27,7 @@
     "sass": "^1.70.0",
     "typescript": "^5.2.2",
     "vite": "^5.0.8",
-    "vue-tsc": "^1.8.25"
+    "vue-tsc": "^1.8.25",
+    "@types/markdown-it": "^13.0.7"
   }
 }
